RESOLVED FIXED51553
[chromium] LayoutTestController warning in float->int conversion
https://bugs.webkit.org/show_bug.cgi?id=51553
Summary [chromium] LayoutTestController warning in float->int conversion
Evan Martin
Reported 2010-12-23 12:32:33 PST
[chromium] LayoutTestController warning in float->int conversion
Attachments
Patch (3.75 KB, patch)
2010-12-23 12:34 PST, Evan Martin
no flags
Evan Martin
Comment 1 2010-12-23 12:34:43 PST
Evan Martin
Comment 2 2010-12-23 12:37:25 PST
Who does Chromium LayoutTestController reviews? Help me find a reviewer. :)
Ryosuke Niwa
Comment 3 2010-12-23 13:23:16 PST
Comment on attachment 77359 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=77359&action=review > Tools/DumpRenderTree/chromium/LayoutTestController.cpp:1383 > - float* pageWidthInPixels, > - float* pageHeightInPixels) > + int* pageWidthInPixels, > + int* pageHeightInPixels) Why don't we use reference?
Evan Martin
Comment 4 2010-12-23 13:26:43 PST
I don't know, is that more common in WebKit? I didn't do it because 1) I wanted to stick the the behavior of the old code and 2) using references for that isn't allowed in Google style, so it didn't occur to me. :)
Ryosuke Niwa
Comment 5 2010-12-23 13:32:29 PST
Comment on attachment 77359 [details] Patch (In reply to comment #4) > I don't know, is that more common in WebKit? I think so. > 1) I wanted to stick the the behavior of the old code and > 2) using references for that isn't allowed in Google style, so it didn't occur to me. :) Ok, r=me. This change is simple enough.
Ryosuke Niwa
Comment 6 2010-12-23 13:34:16 PST
By the way, you should add yourself to http://trac.webkit.org/wiki/WebKit%20Team.
WebKit Commit Bot
Comment 7 2010-12-23 17:19:15 PST
Comment on attachment 77359 [details] Patch Clearing flags on attachment: 77359 Committed r74598: <http://trac.webkit.org/changeset/74598>
WebKit Commit Bot
Comment 8 2010-12-23 17:19:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.