2010-12-23  Evan Martin  <evan@chromium.org>

Reviewed by Ryosuke Niwa.

        [chromium] LayoutTestController warning in float->int conversion
        https://bugs.webkit.org/show_bug.cgi?id=51553

        Rather than reading an int, converting to a float, then getting a compiler
        warning on passing the float to something that expects an int, instead
        just pass around ints.

        No tests, fixes a compiler warning.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (parsePageSizeParameters):
        (LayoutTestController::pageNumberForElementById):
        (LayoutTestController::numberOfPages):

Canonical link: https://commits.webkit.org/64937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74598 268f45cc-cd09-0410-ab3c-d52691b4dbfc